--- a/manualtest/templates/login.html
+++ b/manualtest/templates/login.html
@@ -1,7 +1,10 @@
+{% extends "base.html" %}
+
+{% block title %}Login{% endblock %}
+
+
 {% block body %}
 <div class="jumbotron">
-<h1>Welcome to Test Organizer </h1>
-
 <h4> Please Login </h4>
 <form action="{% url 'login' %}" method="post">
     {% csrf_token %}
@@ -9,7 +12,7 @@
     <input name="password" type="password"  placeholder="Type your password"/>
     <input type="submit" value="Login"/>
 </form>
-
+<h3>{{ message }}</h3>
 <a href="{% url 'newuser' %}">New User? Click here</a>
 </div>
 {% endblock %}
