--- a/manualtest/templates/testrun.html
+++ b/manualtest/templates/testrun.html
@@ -3,16 +3,16 @@
 {% block title %}Organize Your Test{% endblock %}
 
 {% block body %}
-    <a href="{% url 'index' %}"><button>Record New TestCase</button></a>
+    <a href="{% url 'index' %}"><button>Record New TestCase</button></a> <a href="{% url 'report' product.id %}"><button>Generate Report</button></a>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-6" style="background-color:lavenderblush;">
             <p id=myCalendar> </p><br>
             <p id=myTime> </p><br>
             <p>{{message}}</p>
-            <form action="{% url 'testrun' product.id %}" method="post">
+            <h5>Test Run:</h5>
+            <form action="{% url 'testrun' testcasename.id %}" method="post">
                 {% csrf_token %}
-                <textarea name="teststep" rows="10" cols="50" placeholder="Enter Test Steps"></textarea><br>
                 <input name="testresult" type="text" placeholder="Enter Test Result" required/><br>
                 <textarea name="observation" rows="4" cols="50" placeholder="Add Observation"></textarea><br>
                 <input type="submit" value="Save" />
@@ -20,9 +20,9 @@
         </div>
         <div class="col-md-6" style="background-color:lavenderblush;">
             <h5>Test Run:</h5>
-            {% for i in testcases %}
+            {% for i in testrun %}
                 <form id = "{{ i.id }}">{% csrf_token %}
-                    <a id="mySelect" href="{% url 'index' %}" value="{{ i.id }}" name="testcaseTable" class="list-group-item list-group-item-action">{{ i.testcase }}</a>
+                    <a id="mySelect" href="#" value="{{ i.id }}" name="testcaseTable" class="list-group-item list-group-item-action">Test result: {{ i.result}}; Observation: {{i.observation}} </a>
                 </form>
             {% endfor %}
          </div>
